# dotfiles

./: README.md  pyproject.toml  tui.py
.github/workflows/: build-tui.yml
profiles/claude/: CLAUDE.md  settings.json  statusline-command.sh
profiles/claude/agents/: code-engineer.md  code-quality-reviewer.md  project-manager.md
profiles/claude/commands/: dev-team.md
profiles/claude/plugins/: known_marketplaces.json
profiles/claude/teams/dev-team-company-config-logging/: config.json
profiles/claude/teams/dev-team-company-config-logging/inboxes/: code-engineer.json  code-quality-reviewer.json  project-manager.json  team-lead.json
profiles/hypr/: hyprland.lua  hyprlock.conf
profiles/hypr/.legacy/modules/: animations.conf  decorations.conf  env.conf  keybinds.conf  monitors.conf  programs.conf
profiles/hypr/modules/: misc.lua
profiles/hypr/modules/display/: monitors.lua  workspaces.lua
profiles/hypr/modules/input/: keybindings.lua
profiles/hypr/modules/style/: animations.lua  decorations.lua
profiles/hypr/modules/system/: autostart.lua  env.lua  programs.lua
profiles/iceberg/hypr/.legacy/modules/: autostart.conf
profiles/iceberg/hypr/scripts/: hyprlock-launch.sh
profiles/iceberg/waybar/: style.css
profiles/kitty/: kitty.conf
profiles/waybar/: config.jsonc  style.css
profiles/waybar/scripts/: battery.sh  sensors.sh  temp.sh
src/: tui.py  tui.spec
