[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "dotfiles"
version = "0.1.0"
description = ""
requires-python = ">=3.9"
dependencies = [
    "rich==15.0.0"
]

[project.optional-dependencies]
dev = [
    "ruff==0.15.14",
    "pyright==1.1.409"
    "pyinstaller"
]